--- a/cafe-de-altura/package.json
+++ b/cafe-de-altura/package.json
@@ -1,6 +1,11 @@
 {
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.428.0",
-    "mongodb": "^6.8.0"
+    "mongodb": "^6.8.0",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
