--- a/cafe-de-altura/package.json
+++ b/cafe-de-altura/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint" 
+    "lint": "next lint"
   },
   "dependencies": {
+    "lucide": "^0.429.0",
+    "lucide-react": "^0.429.0",
     "mongodb": "^6.8.0",
     "next": "14.2.5",
     "react": "^18",
